// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu Selectable should render 1`] = `
<div>
  <div
    style="width: 200px;"
  >
    <div
      class="Dropdown full-width"
    >
      <div
        class="container"
      >
        <div
          class="button-container"
        >
          <button
            aria-label="Select a value"
            class="Button lg primary stone right has-icon"
            data-test="dropdown-value"
          >
            <svg
              data-jest-file-name="HiChevronUp.svg"
              data-jest-svg-name="HiChevronUp"
              data-testid="HiChevronUp"
            />
            <span>
              Select a value
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownMenu Selectable should render menu on label/button click 1`] = `
<div>
  <div
    style="width: 200px;"
  >
    <div
      class="Dropdown full-width"
    >
      <div
        class="container"
      >
        <div
          class="button-container"
        >
          <button
            aria-label="Select a value"
            class="Button lg primary stone right has-icon"
            data-test="dropdown-value"
          >
            <svg
              data-jest-file-name="HiChevronDown.svg"
              data-jest-svg-name="HiChevronDown"
              data-testid="HiChevronDown"
            />
            <span>
              Select a value
            </span>
          </button>
        </div>
        <div>
          <div
            class="Menu lg menu-enter menu-enter-active"
            data-test="dropdown-menu"
            style="position: absolute; top: 0px; left: 0px; visibility: hidden;"
          >
            <ul>
              <li
                class="MenuItem"
              >
                <button
                  aria-disabled="false"
                  aria-label="Quick save "
                  aria-selected="false"
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Quick save"
                    >
                      Quick save 
                    </span>
                  </span>
                </button>
              </li>
              <li
                class="MenuItem"
              >
                <button
                  aria-disabled="false"
                  aria-label="Save"
                  aria-selected="false"
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Save"
                    >
                      Save
                    </span>
                  </span>
                </button>
              </li>
              <li
                class="MenuItem"
              >
                <button
                  aria-disabled="false"
                  aria-label="Reassign"
                  aria-selected="false"
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Reassign"
                    >
                      Reassign
                    </span>
                  </span>
                </button>
              </li>
              <li
                class="MenuItem"
              >
                <button
                  aria-disabled="false"
                  aria-label="Edit"
                  aria-selected="false"
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Edit"
                    >
                      Edit
                    </span>
                  </span>
                </button>
              </li>
              <li
                class="MenuItem"
              >
                <button
                  aria-disabled="false"
                  aria-label="Delete"
                  aria-selected="false"
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Delete"
                    >
                      Delete
                    </span>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
